<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayoutMain"
    tools:context="com.example.louizibdawi.kmcounterandroid.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/appBar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeTitle"
        android:layout_below="@id/appBar"
        android:gravity="center"
        android:text="Your Events"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_marginTop="10dp"
        android:id="@+id/table_header_layout"
        android:layout_below="@id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/row_background">

            <TextView
                android:id="@+id/name"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/event"
                android:textSize="15sp"
                android:ems="2"
                android:maxLines="3"
                android:minLines="2"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/cell_background"/>

            <TextView
                android:id="@+id/start"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="15sp"
                android:ems="2"
                android:minLines="2"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/cell_background"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/end"
                android:layout_weight="1"
                android:text="@string/end"
                android:textSize="15sp"
                android:ems="2"
                android:minLines="2"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/cell_background"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/kpt"
                android:layout_weight="1"
                android:text="@string/kms_trip"
                android:textSize="15sp"
                android:ems="2"
                android:minLines="2"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/cell_background"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/kms"
                android:layout_weight="1"
                android:text="@string/total_kms"
                android:textSize="15sp"
                android:ems="2"
                android:minLines="2"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/cell_background"/>
        </TableRow>

    </TableLayout>

    <com.example.louizibdawi.kmcounterandroid.MaxHeightScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mhs_maxHeight="300dp"
        android:scrollbars="horizontal"
        android:id="@+id/scrollView"
        android:layout_below="@id/table_header_layout"
        android:background="@drawable/row_background">

        <TableLayout
            android:id="@+id/table_body_layout"
            android:layout_below="@id/table_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.example.louizibdawi.kmcounterandroid.MaxHeightScrollView>

    <TableLayout
        android:id="@+id/table_final_row"
        android:layout_below="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@id/fab"
        android:layout_marginStart="10sp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Kilometers Per:"
            android:textStyle="bold"
            android:textSize="20sp" />

        <RadioButton android:id="@+id/kpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Week"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/kpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Month"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/kpy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Year"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="38dp"
        app:srcCompat="@android:drawable/ic_input_add"/>

</RelativeLayout>
